@@ -117,6 +117,7 @@ public class TestTolerantSearch extends SolrJettyTestBase {
   public void testGetFieldsPhaseError() throws SolrServerException, IOException {
     BadResponseWriter.failOnGetFields = true;
     BadResponseWriter.failOnGetTopIds = false;
+    BadResponseWriter.failAllShards = false;
     SolrQuery query = new SolrQuery();
     query.setQuery("subject:batman OR subject:superman");
     query.addField("id");
@@ -166,6 +167,7 @@ public class TestTolerantSearch extends SolrJettyTestBase {
   public void testGetTopIdsPhaseError() throws SolrServerException, IOException {
     BadResponseWriter.failOnGetTopIds = true;
     BadResponseWriter.failOnGetFields = false;
+    BadResponseWriter.failAllShards = false;
     SolrQuery query = new SolrQuery();
     query.setQuery("subject:batman OR subject:superman");
     query.addField("id");
@@ -212,10 +214,44 @@ public class TestTolerantSearch extends SolrJettyTestBase {
     unIgnoreException("Dummy exception in BadResponseWriter");
   }
 
+  @SuppressWarnings("unchecked")
+  public void testAllShardsFail() throws SolrServerException, IOException {
+    BadResponseWriter.failOnGetTopIds = false;
+    BadResponseWriter.failOnGetFields = false;
+    BadResponseWriter.failAllShards = true;
+    SolrQuery query = new SolrQuery();
+    query.setQuery("subject:batman OR subject:superman");
+    query.addField("id");
+    query.addField("subject");
+    query.set("distrib", "true");
+    query.set("shards", shard1 + "," + shard2);
+    query.set(ShardParams.SHARDS_INFO, "true");
+    query.set("debug", "true");
+    query.set("stats", "true");
+    query.set("stats.field", "id");
+    query.set("mlt", "true");
+    query.set("mlt.fl", "title");
+    query.set("mlt.count", "1");
+    query.set("mlt.mintf", "0");
+    query.set("mlt.mindf", "0");
+    query.setHighlight(true);
+    query.addFacetField("id");
+    query.setFacet(true);
+
+    ignoreException("Dummy exception in BadResponseWriter");
+
+    expectThrows(SolrException.class, () -> collection1.query(query));
+
+    query.set(ShardParams.SHARDS_TOLERANT, "true");
+
+    expectThrows(SolrException.class, () -> collection1.query(query));
+  }
+
   public static class BadResponseWriter extends BinaryResponseWriter {
 
     private static boolean failOnGetFields = false;
     private static boolean failOnGetTopIds = false;
+    private static boolean failAllShards = false;
 
     public BadResponseWriter() {
       super();
@@ -238,6 +274,10 @@ public class TestTolerantSearch extends SolrJettyTestBase {
           && "subject:batman OR subject:superman".equals(req.getParams().get("q", ""))
           && req.getParams().get("ids") == null
           && req.getParams().getBool("isShard", false) == true) {
+        throw new SolrException(
+            SolrException.ErrorCode.SERVER_ERROR, "Dummy exception in BadResponseWriter");
+      } else if (failAllShards) {
+        // fail on every shard
         throw new SolrException(
             SolrException.ErrorCode.SERVER_ERROR, "Dummy exception in BadResponseWriter");
       }
